--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Vite App</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <h1>Cours GitHub</h1>
-    <h2>Version 2.0</h2>
-    <p>Lorem ipsum dolor sit amet,
-    consectetur adipisicing elit. 
-    Fugiat beatae molestias 
-    eum reiciendis quas 
-    aperiam expedita dolores
-     necessitatibus itaque
-    , modi impedit. Totam, quis et.mmmmmmmmmmmm</p>
+  <body class="bg-sky-100">
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
